traefik/searx.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: searx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searx.flakie.org`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    certResolver: cloudflare
